# NumberVerificator

./: CMakeLists.txt  README.md  csvparser.cpp  csvparser.h  hiddennetwork.cpp  hiddennetwork.h  imagesparser.cpp  imagesparser.h  inputdatadeliver.cpp  inputdatadeliver.h  main.cpp  networklayer.cpp  networklayer.h  neuronnetwork.cpp  neuronnetwork.h
Layers/: firstlayer.cpp  firstlayer.h  hiddenlayer.cpp  hiddenlayer.h  layeri.cpp  layeri.h  outputlayer.cpp  outputlayer.h
